# ActionTraction

./: README.md  research_questions.md  test_code.py  timeline.md  tool_description.md
.VSCodeCounter/2021-06-23_11-32-03/: details.md  results.csv  results.md  results.txt
.github/workflows/: main.yml
action-traction/: .mdlrc  .pylintrc  README.md  mine_repository.py  pyproject.toml
action-traction/action_traction/: basic_analysis.py  basic_analysis_calculations.py  basic_metrics.py  basic_metrics_over_time.py  complete_analysis_cli.py  complexity.py  contents_metrics.py  download.py  download_repos.py  file_contents_analysis.py  individual_analysis_cli.py  join.py  main.py  new_complexity.py  new_traverse.py  overall_summary_stats.py  quality_score.py  soph_analysis.py  summarization.py  traverse.py  traverse_repos.py
action-traction/action_traction/traction/: download_repos.py  traverse_repos.py
action-traction/tests/: test_action_traction.py
